<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_getstarted"
    tools:context=".ui.getStarted.GetStartedActivity">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_consult_doctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="86dp"
        android:text="@string/consult_with_doctor"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="44dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_getstarted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/color_button"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:background="@drawable/shape_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_semibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/black_custom"
            android:textSize="18sp"
            android:background="@drawable/shape_button"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/nunito_semibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>