<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <ImageView
        android:id="@+id/image_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_arrow"/>

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/black_custom"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/image_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_profile"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/black_custom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/user_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:layout_marginTop="2dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_profile_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_job"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        tools:listitem="@layout/adapter_profile_menu">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/text_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_profile_menu"
        android:text="@string/text_logout"
        android:fontFamily="@font/nunito_bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_red_custom"/>




</androidx.constraintlayout.widget.ConstraintLayout>